# sel4-idris-apps

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE_BSD2.txt  README.md  dummy.c
build-config/: Kconfig-sel4  Makefile-sel4
build-config/configs-sel4/: ia32_hello-idris-1_defconfig  ia32_hello-idris-2_defconfig  x64_hello-idris-1_defconfig  x64_hello-idris-2_defconfig
idris-app/: CMakeLists.txt
idris-app/src/: CMakeLists.txt
idris-app/src/CMake/: CMakeDetermineIDRISCompiler.cmake  CMakeIDRISCompiler.cmake.in  CMakeIDRISInformation.cmake  CMakeTestIDRISCompiler.cmake
idris-app/src/seL4/: Syscalls.idr  seL4.idr  seL4Debug.idr
idris-apps/hello-idris-1/: Kbuild  Kconfig  Makefile
idris-apps/hello-idris-1/src/: Kbuild  Main.idr  seL4.idr
idris-apps/hello-idris-2/: Kbuild  Kconfig  Makefile
idris-apps/hello-idris-2/src/: Kbuild  Main.idr
src/: CMakeLists.txt
src/cooperative-multitasking/: CMakeLists.txt  Main.idr
src/hello-world/: CMakeLists.txt
